# embutil

./: CMakeLists.txt  Makefile  README.md
src/embutil/algorithm/: Algorithm.hpp  Indexed.hpp  README.md  String.cpp  String.hpp  Time.hpp  Vector.hpp
src/embutil/container/: Buffer.hpp  Buffer.impl  FixedSizeQueue.hpp  README.md
src/embutil/snippet/: IdentifiedInstance.hpp  LockWrapper.hpp  LongRequestQueue.hpp  NothrowFuture.hpp  README.md  SemaphoreTypeInvokeSelector.hpp  Singleton.hpp  StaticInstanceRegistry.hpp  StaticInstanceStorage.hpp  StubMutex.hpp  StubSemaphore.hpp  SubscriberNotification.hpp
test/snippet_lib_queue_test/: CMakeLists.txt  Makefile  main.cpp  utility
test/snippet_lib_test/: CMakeLists.txt  Makefile  main.cpp
test/stub/: CMakeLists.txt  main.cpp
