cmake_minimum_required(VERSION 3.12)
project(snippet_lib_queue_test)
include_directories(".")
file(GLOB SOURCES "*.cpp")
set(EXECUTABLE_NAME snippet_lib_queue_test)
add_executable(${EXECUTABLE_NAME} ${SOURCES})
set_property(TARGET ${EXECUTABLE_NAME} PROPERTY CXX_STANDARD 11)
add_compile_options(${EXECUTABLE_NAME} PUBLIC "-ggdb")
target_link_libraries(${EXECUTABLE_NAME} PUBLIC pthread)
